# ECS173-HW-1

./: CMakeLists.txt  eigen_faces.cxx  itkCollectionOfPatchesHandLabeledIterator.h  itkCollectionOfPatchesHandLabeledIterator.txx  itkCollectionOfPatchesIterator.h
images/test/: .Rhistory  ground_truth  reprojection_error
